logs/gazebo_moveit_objects_synchroniser/build.make.000.log
[35m[1mScanning dependencies of target moveit_msgs_generate_messages_nodejs[0m
[35m[1mScanning dependencies of target std_msgs_generate_messages_py[0m
[35m[1mScanning dependencies of target moveit_msgs_generate_messages_py[0m
[35m[1mScanning dependencies of target gazebo_moveit_objects_synchroniser_generate_messages_java_gradle[0m
[35m[1mScanning dependencies of target std_msgs_generate_messages_nodejs[0m
[35m[1mScanning dependencies of target moveit_msgs_generate_messages_lisp[0m
[35m[1mScanning dependencies of target _gazebo_moveit_objects_synchroniser_generate_messages_check_deps_CollisionObjectArray[0m
[  0%] Built target moveit_msgs_generate_messages_nodejs
[35m[1mScanning dependencies of target std_msgs_generate_messages_lisp[0m
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target moveit_msgs_generate_messages_lisp
[  6%] [34m[1mGenerating Java gradle project from gazebo_moveit_objects_synchroniser[0m
[  6%] Built target moveit_msgs_generate_messages_py
[35m[1mScanning dependencies of target std_msgs_generate_messages_cpp[0m
[  6%] Built target std_msgs_generate_messages_nodejs
[  6%] Built target std_msgs_generate_messages_lisp
[35m[1mScanning dependencies of target std_msgs_generate_messages_eus[0m
[35m[1mScanning dependencies of target moveit_msgs_generate_messages_eus[0m
[  6%] Built target std_msgs_generate_messages_cpp
[  6%] Built target _gazebo_moveit_objects_synchroniser_generate_messages_check_deps_CollisionObjectArray
[35m[1mScanning dependencies of target moveit_msgs_generate_messages_cpp[0m
[  6%] Built target std_msgs_generate_messages_eus
[35m[1mScanning dependencies of target gazebo_moveit_objects_synchroniser_generate_messages_nodejs[0m
[35m[1mScanning dependencies of target gazebo_moveit_objects_synchroniser_generate_messages_py[0m
[35m[1mScanning dependencies of target gazebo_moveit_objects_synchroniser_generate_messages_java[0m
[  6%] Built target moveit_msgs_generate_messages_eus
[  6%] Built target moveit_msgs_generate_messages_cpp
[35m[1mScanning dependencies of target gazebo_moveit_objects_synchroniser_generate_messages_lisp[0m
[ 13%] [34m[1mGenerating Javascript code from gazebo_moveit_objects_synchroniser/CollisionObjectArray.msg[0m
[35m[1mScanning dependencies of target gazebo_moveit_objects_synchroniser_generate_messages_cpp[0m
[ 26%] [34m[1mGenerating Python from MSG gazebo_moveit_objects_synchroniser/CollisionObjectArray[0m
[ 26%] [34m[1mGenerating Java gradle project from gazebo_moveit_objects_synchroniser[0m
[35m[1mScanning dependencies of target gazebo_moveit_objects_synchroniser_generate_messages_eus[0m
[ 33%] [34m[1mGenerating Lisp code from gazebo_moveit_objects_synchroniser/CollisionObjectArray.msg[0m
[ 40%] [34m[1mGenerating C++ code from gazebo_moveit_objects_synchroniser/CollisionObjectArray.msg[0m
[ 46%] [34m[1mGenerating EusLisp manifest code for gazebo_moveit_objects_synchroniser[0m
[ 53%] [34m[1mGenerating EusLisp code from gazebo_moveit_objects_synchroniser/CollisionObjectArray.msg[0m
[ 53%] Built target gazebo_moveit_objects_synchroniser_generate_messages_lisp
[ 53%] Built target gazebo_moveit_objects_synchroniser_generate_messages_nodejs
[ 60%] [34m[1mGenerating Python msg __init__.py for gazebo_moveit_objects_synchroniser[0m
[ 60%] Built target gazebo_moveit_objects_synchroniser_generate_messages_cpp
[35m[1mScanning dependencies of target gazebo_moveit_objects_synchroniser[0m
[ 66%] [32mBuilding CXX object CMakeFiles/gazebo_moveit_objects_synchroniser.dir/src/GazeboMeshManager.cpp.o[0m
[ 73%] [32mBuilding CXX object CMakeFiles/gazebo_moveit_objects_synchroniser.dir/src/GazeboObjectListMaker.cpp.o[0m
[ 86%] [32mBuilding CXX object CMakeFiles/gazebo_moveit_objects_synchroniser.dir/src/Gazebo_moveit_objects_synchroniser.cpp.o[0m
[ 86%] [32mBuilding CXX object CMakeFiles/gazebo_moveit_objects_synchroniser.dir/src/GazeboMoveITObjectConverter.cpp.o[0m
[ 86%] Built target gazebo_moveit_objects_synchroniser_generate_messages_py
[ 86%] Built target gazebo_moveit_objects_synchroniser_generate_messages_java
[ 93%] [34m[1mCompiling Java code for gazebo_moveit_objects_synchroniser[0m
[0m[ 93%] Built target gazebo_moveit_objects_synchroniser_generate_messages_eus
warning: [options] bootstrap class path not set in conjunction with -source 1.7
/home/dtrimoul/PR2-Kinetic-Xenial/build/gazebo_moveit_objects_synchroniser/java/gazebo_moveit_objects_synchroniser/src/main/java/gazebo_moveit_objects_synchroniser/CollisionObjectArray.java:6: error: package moveit_msgs does not exist
  java.util.List<moveit_msgs.CollisionObject> getData();
                            ^
/home/dtrimoul/PR2-Kinetic-Xenial/build/gazebo_moveit_objects_synchroniser/java/gazebo_moveit_objects_synchroniser/src/main/java/gazebo_moveit_objects_synchroniser/CollisionObjectArray.java:7: error: package moveit_msgs does not exist
  void setData(java.util.List<moveit_msgs.CollisionObject> value);
                                         ^
2 errors
1 warning

[31mFAILURE: [39m[31mBuild failed with an exception.[39m

* What went wrong:
Execution failed for task ':compileJava'.
[33m> [39mCompilation failed; see the compiler error output for details.

* Try:
Run with [1m--stacktrace[22m option to get the stack trace. Run with [1m--info[22m or [1m--debug[22m option to get more log output.
[0m[ 93%] Built target gazebo_moveit_objects_synchroniser_generate_messages_java_gradle
[35m[1mScanning dependencies of target gazebo_moveit_objects_synchroniser_generate_messages[0m
[ 93%] Built target gazebo_moveit_objects_synchroniser_generate_messages
In file included from [01m[K/opt/ros/kinetic/include/ros/ros.h:40:0[m[K,
                 from [01m[K/home/dtrimoul/PR2-Kinetic-Xenial/src/gazebo_moveit_objects_synchroniser/src/Gazebo_moveit_objects_synchroniser.cpp:6[m[K:
[01m[K/home/dtrimoul/PR2-Kinetic-Xenial/src/gazebo_moveit_objects_synchroniser/src/Gazebo_moveit_objects_synchroniser.cpp:[m[K In function ‘[01m[Kint main(int, char**)[m[K’:
[01m[K/opt/ros/kinetic/include/ros/console.h:346:176:[m[K [01;35m[Kwarning: [m[Kformat not a string literal and no format arguments [-Wformat-security]
     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
[01;32m[K                                                                                                                                                                                ^[m[K
[01m[K/opt/ros/kinetic/include/ros/console.h:349:5:[m[K [01;36m[Knote: [m[Kin expansion of macro ‘[01m[KROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER[m[K’
     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(0, __VA_ARGS__)
[01;32m[K     ^[m[K
[01m[K/opt/ros/kinetic/include/ros/console.h:379:7:[m[K [01;36m[Knote: [m[Kin expansion of macro ‘[01m[KROSCONSOLE_PRINT_AT_LOCATION[m[K’
       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
[01;32m[K       ^[m[K
[01m[K/opt/ros/kinetic/include/ros/console.h:561:35:[m[K [01;36m[Knote: [m[Kin expansion of macro ‘[01m[KROS_LOG_COND[m[K’
 #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
[01;32m[K                                   ^[m[K
[01m[K/opt/ros/kinetic/include/rosconsole/macros_generated.h:110:23:[m[K [01;36m[Knote: [m[Kin expansion of macro ‘[01m[KROS_LOG[m[K’
 #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
[01;32m[K                       ^[m[K
[01m[K/home/dtrimoul/PR2-Kinetic-Xenial/src/gazebo_moveit_objects_synchroniser/src/Gazebo_moveit_objects_synchroniser.cpp:44:21:[m[K [01;36m[Knote: [m[Kin expansion of macro ‘[01m[KROS_INFO[m[K’
                     ROS_INFO(exc.c_str());
[01;32m[K                     ^[m[K
[100%] [32m[1mLinking CXX executable /home/dtrimoul/PR2-Kinetic-Xenial/devel/.private/gazebo_moveit_objects_synchroniser/lib/gazebo_moveit_objects_synchroniser/gazebo_moveit_objects_synchroniser[0m
[100%] Built target gazebo_moveit_objects_synchroniser
